# cdedb2

./: .coveragerc  .dockerignore  .drone.yml  .editorconfig  .flake8  .gitattributes  .gitignore  .ldap_rootdn  .ldap_rootpw  .pylintrc  COPYING  INSTALL.html  Makefile  PLAN.org  README  README.md  TODO.org  babel.cfg  lint.rc  mypy.ini  pyproject.toml  q  sql-ldap.ldif  sql.txt  strippocomments  x
.githooks/: pre-commit  pre-merge-commit
cdedb/: __init__.py  __main__.py  common.py  config.py  devsamples.py  enums.py  filter.py  i18n_additional.py  internationalization.py  internationalizationdata.py  localconfig.py.sample  ml_subscription_aux.py  ml_type_aux.py  query.py  query_defaults.py  related  script.py  security.py  serialization.py  subscription_aux.py  testconfig.py.off  validation.py  validationdata.py  validationpasswords.py  validationtypes.py
cdedb/backend/: __init__.py  assembly.py  attachment.py  cde.py  common.py  core.py  entity_keeper.py  event.py  event_base.py  event_course.py  event_helpers.py  event_lodgement.py  event_lowlevel.py  event_query.py  event_registration.py  ml.py  new_event.py  new_event_base.py  past_event.py  rpc.py  session.py  uncommon.py
cdedb/cli/: __main__.py  database.py  server.py  storage.py  util.py
cdedb/common/: __init__.py  attachment.py  exceptions.py  fields.py  i18n.py  intenum.py  n_.py  roles.py  sorting.py  submanshim.py
cdedb/database/: __init__.py  cdedb-aux.sql  cdedb-db.sql  cdedb-ldap.sql  cdedb-tables.sql  cdedb-users.sql  cdepersona.schema  connection.py  constants.py  conversions.py  graft-cleanup.sql  graft-prepare.sql  init.ldif  query.py
cdedb/fee_condition_parser/: evaluation.py  modifying.py  parsing.py  roundtrip.py
cdedb/frontend/: __init__.py  application.py  assembly.py  cde.py  cde_base.py  cde_lastschrift.py  cde_parse.py  cde_past_event.py  cde_semester.py  common.py  core.py  core_base.py  core_genesis.py  cron.py  event.py  event_lodgement_wishes.py  ml.py  ml_base.py  ml_mailman.py  ml_rklists.py  parse_statement.py  paths.py  uncommon.py
cdedb/ldap/: __init__.py  backend.py  entry.py  main.py  schema.py  server.py  sql.py  tree.py
cdedb/model/: common.py  ml.py
cdedb/models/: common.py  core.py  droid.py  event.py  ml.py  tmp.py
cdedb/setup/: __init__.py  __main__.py  config.py  database.py  storage.py  util.py
cdedb/subman/: __init__.py  exceptions.py  machine.py  setup.cfg  subman.py
cdedb/subman/tests/: test_basics.py
cdedb/uncommon/: __init__.py  intenum.py  submanshim.py
cdedb_setup/: __main__.py  config.py  database.py  storage.py  util.py
doc/: Makefile
doc/source/: API.rst  API_Constants.rst  API_Droids.rst  API_LDAP.rst  API_OAuth.rst  API_Orga.rst  Architecture.rst  Architecture_API_droids.rst  Architecture_Admin_Views.rst  Architecture_Assembly.rst  Architecture_Assembly_Voting_Procedere.rst  Architecture_Core.rst  Architecture_Design.rst  Architecture_Droids.rst  Architecture_Event.rst  Architecture_Events.rst  Architecture_Events_Registration_Query.rst  Architecture_Mailinglist.rst  Architecture_Mailinglist_Management.rst  Architecture_Mailinglist_Types.rst  Architecture_Mailinglists.rst  Architecture_Privileges.rst  Architecture_Realms.rst  Archive.rst  Archive_LDAP.rst  Archive_Specification.rst  Auxiliary.rst  Backend.rst  Backend_Assembly.rst  Backend_CdE.rst  Backend_Core.rst  Backend_Event.rst  Backend_Ml.rst  Backend_Session.rst  Course_Query.rst  Database.rst  Design.rst  Design_Backend.rst  Design_Configuration.rst  Design_Database.rst  (+123 more)
fee_condition_parser/: evaluation.py  modifying.py  parsing.py  roundtrip.py
i18n/: git-diff-filter-po.sh  git-merge-po.sh  po-diff-handler
i18n/la/: lexikon.txt  wordlist.txt
ldap/: add-duas.sql  cdedb-ldap.ldif  config-ldap.ldif  create-ldap.py  odbc.ini  remove-ldap.py  slapd-debconf.txt  update-ldap.py  util.py
ldap/templates/: add-duas.tmpl  cdedb-ldap.tmpl  (+3 more)
related/: Dockerfile  README  custom_mailman_manipulate.py  pgbouncer_users.txt
static/: cdedb-general.js  cdedb.css  cdedb_batch_admission.js  cdedb_change_mailinglist.js  cdedb_configure_mailinglist.js  cdedb_csv_tools.js  cdedb_dynamicrow.js  cdedb_helper.js  cdedb_historycollapse.js  cdedb_manage_participants.js  cdedb_multiselect.js  cdedb_multiset.js  cdedb_orderrow.js  cdedb_queryform.js  cdedb_questionnaire_config.js  cdedb_register.js  cdedb_search_event.js  cdedb_searchpersona.js  cdedb_searchregistration.js  cdedb_voting.js  doc.css  fcp.css  fontawesome  jquery-ui  print.css  selectize  verify_result.py  verify_vote.py
test/: common.py  create_sample_data_json.py  create_sample_data_sql.py  localconfig.py  main.py  singular.py  test_backend_assembly.py  test_backend_cde.py  test_backend_common.py  test_backend_core.py  test_backend_event.py  test_backend_ml.py  test_backend_past_event.py  test_backend_rpc.py  test_backend_session.py  test_common.py  test_config.py  test_database.py  test_frontend_application.py  test_frontend_assembly.py  test_frontend_cde.py  test_frontend_common.py  test_frontend_core.py  test_frontend_cron.py  test_frontend_event.py  test_frontend_ml.py  test_frontend_parse.py  test_frontend_privacy.py  test_i18n.py  test_offline.py  test_script.py  test_serialization.py  test_session.py  test_validation.py  test_vote_verification_script.py
tests/: check.py  common.py  create_sample_data_json.py  create_sample_data_sql.py  custom_testrunners.py  helpers.py  main.py  singular.py  test_backend_assembly.py  test_backend_cde.py  test_backend_common.py  test_backend_core.py  test_backend_event.py  test_backend_ml.py  test_backend_past_event.py  test_common.py  test_config.py  test_database.py  test_frontend_application.py  test_frontend_assembly.py  test_frontend_cde.py  test_frontend_common.py  test_frontend_core.py  test_frontend_cron.py  test_frontend_event.py  test_frontend_ml.py  test_frontend_parse.py  test_frontend_privacy.py  test_ldap.py  test_offline.py  test_script.py  test_session.py  test_subman.py  test_validation.py  test_vote_verification_script.py  test_zzzoffline.py
wsgi/: cdedb-app.py  cdedb.wsgi
(+1096 files in other folders)
