[metadata]
name = subman
version = 0.1.0
author = Lars Esser, Maarten Grothus, Tobias Udtke
author_email =
maintainer =  CdE-Datenbank development team
maintainer_email = cdedb@lists.cde-ev.de
description = Powerful Python package to manage subscriptions.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = subscription, mailinglist, opt-out
url =
project_urls =
    Bug Tracker =
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
